[tool.poetry]
name = "talkgpt"
version = "0.1.0"
description = ""
authors = ["Duy Huynh <vndee.huynh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
requests = "^2.31.0"
rich = "^13.7.1"
torch = "^2.2.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
sounddevice = "^0.4.6"
speechrecognition = "^3.10.1"
pyaudio = "^0.2.14"
langchain = "^0.1.13"
nltk = "^3.8.1"
soundfile = "^0.12.1"
aliyun-python-sdk-core = "^2.15.0"
nls = {git = "https://github.com/aliyun/alibabacloud-nls-python-sdk.git"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




